--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\ferna\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
     "python.linting.enabled": false
 }
